cmake_minimum_required(VERSION 3.5)

project(realty CXX)

find_package(dlib REQUIRED)
add_executable(rclss rclss.cpp)
set_target_properties(rclss PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
target_include_directories(rclss PRIVATE include)
target_link_libraries(rclss dlib::dlib)
#target_compile_options(rclss PRIVATE -g)

add_executable(rclst rclst.cpp)
set_target_properties(rclst PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
target_include_directories(rclst PRIVATE include)
target_link_libraries(rclst dlib::dlib)
#target_compile_options(rclst PRIVATE -g)

install(TARGETS rclss rclst RUNTIME DESTINATION bin)
set(CPACK_GENERATOR DEB)
set(CPACK_PACKAGE_NAME "realty")
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}")
set(CPACK_PACKAGE_VERSION_MAJOR "0")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "1")
set(CPACK_PACKAGE_CONTACT example@example.com)
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS YES)
include(CPack)
